--- a/index.html
+++ b/index.html
@@ -366,6 +366,18 @@
   .meter-filter input:hover {
     box-shadow: 3px 3px 0px #5f9e9e;
   }
+
+  .sparkle {
+    position: fixed;
+    pointer-events: none;
+    z-index: 9999;
+    font-size: 14px;
+    animation: sparkle-fade 0.7s ease-out forwards;
+  }
+  @keyframes sparkle-fade {
+    0% { opacity: 1; transform: scale(1) translate(0, 0) rotate(0deg); }
+    100% { opacity: 0; transform: scale(0.2) translate(var(--dx), var(--dy)) rotate(180deg); }
+  }
 </style>
 </head>
 <body>
@@ -458,6 +470,28 @@
   </div>
 </div>
 
+<script>
+(function() {
+  const sparkles = ['\u2728', '\u2B50', '\u00B7', '\u2736', '\u2022'];
+  const colors = ['#6b1d3a', '#5f9e9e', '#f7b731', '#e94560', '#a55eea'];
+  let last = 0;
+  document.addEventListener('mousemove', e => {
+    const now = Date.now();
+    if (now - last < 50) return;
+    last = now;
+    const el = document.createElement('span');
+    el.className = 'sparkle';
+    el.textContent = sparkles[Math.floor(Math.random() * sparkles.length)];
+    el.style.left = e.clientX + 'px';
+    el.style.top = e.clientY + 'px';
+    el.style.color = colors[Math.floor(Math.random() * colors.length)];
+    el.style.setProperty('--dx', (Math.random() - 0.5) * 40 + 'px');
+    el.style.setProperty('--dy', (Math.random() * -30 - 10) + 'px');
+    document.body.appendChild(el);
+    el.addEventListener('animationend', () => el.remove());
+  });
+})();
+</script>
 <script type="module">
   // =====================================================
   // FIREBASE CONFIG — Replace these values with your own!
