--- a/index.html
+++ b/index.html
@@ -367,6 +367,122 @@
     box-shadow: 3px 3px 0px #5f9e9e;
   }
 
+  .dark-toggle {
+    position: fixed;
+    top: 16px;
+    right: 16px;
+    width: 44px;
+    height: 44px;
+    border: 3px solid #6b1d3a;
+    border-radius: 50%;
+    background: #fff;
+    box-shadow: 3px 3px 0px #5f9e9e;
+    cursor: pointer;
+    font-size: 1.3rem;
+    line-height: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+    transition: transform 0.15s, box-shadow 0.15s, background 0.3s, border-color 0.3s;
+    padding: 0;
+  }
+  .dark-toggle:hover {
+    transform: translate(-2px, -2px) rotate(-15deg);
+    box-shadow: 5px 5px 0px #5f9e9e;
+  }
+  .dark-toggle:active {
+    transform: translate(0,0);
+    box-shadow: none;
+  }
+
+  /* Dark mode overrides */
+  body.dark {
+    background: #1e0f18;
+    color: #efe0d6;
+  }
+  body.dark .dark-toggle {
+    background: #3a2030;
+    border-color: #8fbcbc;
+    box-shadow: 3px 3px 0px #3d6b6b;
+  }
+  body.dark .dark-toggle:hover {
+    box-shadow: 5px 5px 0px #3d6b6b;
+  }
+  body.dark .meter-container {
+    background-color: #2a1520;
+    border-color: #8fbcbc;
+    box-shadow: 5px 5px 0px #3d6b6b;
+  }
+  body.dark .meter-container .placeholder-text { color: #7a6060; }
+  body.dark .form-section {
+    background: #2a1520;
+    border-color: #8fbcbc;
+    box-shadow: 5px 5px 0px #3d6b6b;
+  }
+  body.dark .form-section h2 { color: #8fbcbc; }
+  body.dark .entries-section {
+    background: #2a1520;
+    border-color: #8fbcbc;
+    box-shadow: 5px 5px 0px #3d6b6b;
+  }
+  body.dark .entries-section h2 { color: #8fbcbc; }
+  body.dark .input-group label { color: #8fbcbc; }
+  body.dark .input-group input {
+    background: #3a2535;
+    border-color: #4a7a7a;
+    color: #efe0d6;
+  }
+  body.dark .input-group input:focus,
+  body.dark .input-group select:focus {
+    border-color: #8fbcbc;
+    box-shadow: 2px 2px 0px #3d6b6b;
+  }
+  body.dark .input-group select {
+    background: #3a2535;
+    border-color: #4a7a7a;
+    color: #efe0d6;
+  }
+  body.dark .role-row { color: #8fbcbc; }
+  body.dark .role-row select {
+    background: #3a2535;
+    border-color: #4a7a7a;
+    color: #efe0d6;
+  }
+  body.dark .role-row select:focus {
+    border-color: #8fbcbc;
+    box-shadow: 2px 2px 0px #3d6b6b;
+  }
+  body.dark .btn-submit {
+    background: #8fbcbc;
+    color: #1e0f18;
+    border-color: #8fbcbc;
+    box-shadow: 3px 3px 0px #6b1d3a;
+  }
+  body.dark .btn-submit:hover {
+    box-shadow: 5px 5px 0px #6b1d3a;
+  }
+  body.dark .btn-clear { color: #5a4a50; }
+  body.dark .btn-clear:hover { color: #8a7a80; }
+  body.dark .id-error { color: #ff8a7a; }
+  body.dark .admin-greeting { color: #8fbcbc; }
+  body.dark .entries-list li { border-bottom-color: #3a2535; color: #efe0d6; }
+  body.dark .entries-list li .entry-coords { color: #8fbcbc; }
+  body.dark .no-entries { color: #6a5a60; }
+  body.dark .meter-filter { color: #8fbcbc; }
+  body.dark .meter-filter input {
+    background: #3a2535;
+    border-color: #8fbcbc;
+    box-shadow: 2px 2px 0px #3d6b6b;
+  }
+  body.dark .meter-filter input:checked { background: #8fbcbc; }
+  body.dark .meter-filter input:checked::after {
+    border-color: #1e0f18;
+  }
+  body.dark .meter-filter input:hover {
+    box-shadow: 3px 3px 0px #3d6b6b;
+  }
+
   .sparkle {
     position: fixed;
     pointer-events: none;
@@ -381,6 +497,8 @@
 </style>
 </head>
 <body>
+
+<button class="dark-toggle" id="dark-toggle" title="Toggle dark mode">☀️</button>
 
 <div class="meter-container" id="meter">
   <span class="placeholder-text" id="placeholder">
@@ -472,6 +590,19 @@
 
 <script>
 (function() {
+  // Dark mode toggle
+  const toggle = document.getElementById('dark-toggle');
+  const isDark = localStorage.getItem('mood-dark') === '1';
+  if (isDark) document.body.classList.add('dark');
+  toggle.textContent = isDark ? '🌙' : '☀️';
+  toggle.addEventListener('click', () => {
+    document.body.classList.toggle('dark');
+    const dark = document.body.classList.contains('dark');
+    localStorage.setItem('mood-dark', dark ? '1' : '0');
+    toggle.textContent = dark ? '🌙' : '☀️';
+  });
+
+  // Sparkle cursor trail
   const sparkles = ['\u2728', '\u2B50', '\u00B7', '\u2736', '\u2022'];
   const colors = ['#6b1d3a', '#5f9e9e', '#f7b731', '#e94560', '#a55eea'];
   let last = 0;
